latest commit on tab panelling

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -140,7 +140,7 @@
     <%- body %>
 
     <!-- TODO: Partialize this -->
-    <section id="newsletter">
+    <section id="newsletter" class="padded">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
