--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -9,30 +9,61 @@
   <img src="images/cropped-subhero.jpg" alt="subhero-image">
 </div>
 
-<section id="services" class="horizontal-center">
+<section id="services" class="service-tabs-container">
   <div class="container">
-    <p class="lead">
-      Reelak helps you engage with today’s young, modern audience through a fresh and unique take on the cinematic experience.
-    </p>
-    <div class="col-md-4">
-      <h2>Films</h2>
-      <p>Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Spaces</h2>
-      <p>The cinema: uprooted, reimagined, and recreated within the context of everyday spaces.</p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Experiences</h2>
-      <p>Film, space, and everything in between: the signature Reelak experience, customised for you.</p>
-      <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+    <div class="row horizontal-center">
+      <p class="lead">
+        Reelak helps you engage with today's young, modern audience through a fresh and unique take on the cinematic experience.
+      </p>
+      <div class="col-md-4">
+        <h2>Films</h2>
+        <p>Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
+        <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="1">View details &raquo;</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>Spaces</h2>
+        <p>The cinema: uprooted, reimagined, and recreated within the context of everyday spaces.</p>
+        <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="2">View details &raquo;</a></p>
+      </div>
+      <div class="col-md-4">
+        <h2>Experiences</h2>
+        <p>Film, space, and everything in between: the signature Reelak experience, customised for you.</p>
+        <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="3">View details &raquo;</a></p>
+      </div>
     </div>
   </div>
 </section>
-
-<section id="testimonials" class="horizontal-center">
+<section class="service-panels-container">
+  <div class="container-fluid">
+    <div class="row service-contents">
+      <div class="col-md-8 col-md-offset-2 service-panels" data-panel="1">
+        <p class="lead">Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
+        <p>
+          We choose international cinema for a body of work that portrays different stories and experiences, in a way that remains universal.
+        </p>
+        <p>
+          Whether it's a Brazilian coming-of-age drama or a wry look at Israel's compulsory national service, we help you find the one film (or films!) that best connects with your target audience.
+        </p>
+      </div>
+      <div class="col-md-8 col-md-offset-2 service-panels" data-panel="2">
+        <p class="lead">The cinema: uprooted, reimagined, and recreated within the context of everyday spaces.</p>
+        <p>
+          Films are best enjoyed in a communal setting, but with the ubiquity of the traditional cinema, watching films in what is essentially a dark box can be a constraint.
+        </p>
+        <p>
+          To bring the cinema into everyday spaces, we deconstruct and reimagine its very concept, putting everything back together within the context of the event’s theme and audience.
+        </p>
+      </div>
+      <div class="col-md-8 col-md-offset-2 service-panels" data-panel="3">
+        <p class="lead">Film, space, and everything in between: the signature Reelak experience, customised for you.</p>
+        <p>
+          The Reelak experience is known for reigniting the nostalgia of community spirit by bringing together different parts (films, spaces, fringe events) into one event tightly curated for the right target audience.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<section id="testimonials" class="horizontal-center padded">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -50,7 +81,7 @@
             <div class="item active">
               <blockquote>
                 <p>
-                  "While cinemas will shelter you from the worst of the weather elements (read: the haze), they do next to nothing to enhance your sense of adventure. That’s where Reelak steps in."
+                  "While cinemas will shelter you from the worst of the weather elements (read: the haze), they do next to nothing to enhance your sense of adventure. That's where Reelak steps in."
                 </p>
                 <footer><cite title="The Business Times">The Business Times</cite></footer>
               </blockquote>
@@ -58,7 +89,7 @@
             <div class="item">
               <blockquote>
                 <p>
-                  "While cinemas will shelter you from the worst of the weather elements (read: the haze), they do next to nothing to enhance your sense of adventure. That’s where Reelak steps in."
+                  "While cinemas will shelter you from the worst of the weather elements (read: the haze), they do next to nothing to enhance your sense of adventure. That's where Reelak steps in."
                 </p>
                 <footer><cite title="The Business Times">The Business Times</cite></footer>
               </blockquote>
