--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -96,13 +96,41 @@
   background: none;
 }
 
-.jumbotron, section {
+.jumbotron {
   /*padding: 100px 0;*/
   height: 100vh;
   width: 100vw;
   display:flex;
   justify-content:center;
   align-items:center;
+}
+
+section.padded {
+  margin: 200px 0;
+}
+
+section.service-tabs-container {
+  margin-top: 200px;
+}
+
+section.service-panels-container {
+  padding-top: 20px;
+  height: 0;
+  overflow: hidden;
+  transition: height 1s ease-in;
+}
+
+section.service-panels-container.opened {
+  height: 400px;
+}
+
+.service-panels {
+  opacity: 0;
+  transition: opacity 0.2s ease-in;
+}
+
+.service-panels.displayed {
+  opacity: 1;
 }
 
 .horizontal-center {
