--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -16,17 +16,17 @@
         Reelak helps you engage with today's young, modern audience through a fresh and unique take on the cinematic experience.
       </p>
       <div class="col-md-4">
-        <h2>Films</h2>
+        <h2>Film Curation</h2>
         <p>Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
         <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="1">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h2>Spaces</h2>
+        <h2>Space Design</h2>
         <p>The cinema: uprooted, reimagined, and recreated within the context of everyday spaces.</p>
         <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="2">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h2>Experiences</h2>
+        <h2>Bespoke Experience</h2>
         <p>Film, space, and everything in between: the signature Reelak experience, customised for you.</p>
         <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="3">View details &raquo;</a></p>
       </div>
@@ -35,7 +35,7 @@
 </section>
 <section class="service-panels-container">
   <div class="container-fluid">
-    <div class="row service-contents">
+    <div class="row">
       <div class="col-md-8 col-md-offset-2 service-panels" data-panel="1">
         <p class="lead">Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
         <p>
@@ -59,6 +59,11 @@
         <p>
           The Reelak experience is known for reigniting the nostalgia of community spirit by bringing together different parts (films, spaces, fringe events) into one event tightly curated for the right target audience.
         </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <%- partial('../partials/_enquiry') %>
       </div>
     </div>
   </div>
