--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -191,7 +191,7 @@
             <p>
               Follow us:<br>
               <span class="h2">
-                <a href="#" target="_blank">
+                <a href="https://www.facebook.com/reelakcinema/" target="_blank">
                   Facebook
                 </a> / <a href="#" target="_blank">
                   Instagram
