minor update non-home page

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,92 +1,90 @@
-<div class="nonhome-page">
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h1 class="page-header" id="dropdowns">
-            About Us
-          </h1>
-          <p class="lead">
-            We bring films outside and into everyday spaces.
-          </p>
-          <p>
-            We believe great movies are meant to be enjoyed together in a communal setting. Each screening takes place in an open-air setting, at different locations aligned with the theme/genre of the film itself.
-          </p>
-        </div>
+<section class="spread">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h1 class="page-header" id="dropdowns">
+          About Us
+        </h1>
+        <p class="lead">
+          We bring films outside and into everyday spaces.
+        </p>
+        <p>
+          We believe great movies are meant to be enjoyed together in a communal setting. Each screening takes place in an open-air setting, at different locations aligned with the theme/genre of the film itself.
+        </p>
       </div>
     </div>
-  </section>
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h2 class="page-header" id="dropdowns">
-            About Our Films
-          </h1>
-          <p class="lead">
-            We want to screen films that are beautiful and thought-provoking, yet accessible.
-          </p>
-          <p>
-            Our films come from the rich and diverse catalog of international cinema, films that are hugely celebrated in their native soils, but didn’t necessarily ‘make it’ in Hollywood. Through diverse works that tell meaningful stories in creative ways, We fill the space in between commercial and arthouse.
-          </p>
-        </div>
+  </div>
+</section>
+<section class="spread">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h2 class="page-header" id="dropdowns">
+          About Our Films
+        </h1>
+        <p class="lead">
+          We want to screen films that are beautiful and thought-provoking, yet accessible.
+        </p>
+        <p>
+          Our films come from the rich and diverse catalog of international cinema, films that are hugely celebrated in their native soils, but didn’t necessarily ‘make it’ in Hollywood. Through diverse works that tell meaningful stories in creative ways, We fill the space in between commercial and arthouse.
+        </p>
       </div>
     </div>
-  </section>
-  <section id="meet-the-team">
-    <div class="container-fluid no-padding">
-      <div class="row">
-        <img src="https://unsplash.it/900/150" width="100%" alt="">
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="row">
-            <h2 class="page-header">Our Team</h2>
-            <div class="col-md-3">
-              <h3>Prima Aulia Gusta</h3>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <div class="col-md-3">
-              <h3>Aqila Abu</h3>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <div class="col-md-3">
-              <h3>Elaine Neo</h3>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <div class="col-md-3">
-              <h3>Putra Muskita</h3>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
+  </div>
+</section>
+<section id="meet-the-team">
+  <div class="container-fluid no-padding">
+    <div class="row">
+      <img src="https://unsplash.it/900/150" width="100%" alt="">
+    </div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <div class="row">
+          <h2 class="page-header">Our Team</h2>
+          <div class="col-md-3">
+            <h3>Prima Aulia Gusta</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
+          <div class="col-md-3">
+            <h3>Aqila Abu</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
+          <div class="col-md-3">
+            <h3>Elaine Neo</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
+          <div class="col-md-3">
+            <h3>Putra Muskita</h3>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <div id="brands" class="jumbotron">
-    <img src="https://unsplash.it/900/450" width="100%" alt="">
   </div>
-  <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h2 class="page-header" id="dropdowns">
-            Why Work With Us
-          </h1>
-          <p>
-            Reelak lets you engage with a young, tech-savvy audience with high social influence. Our past events regularly amass coverage in Singapore’s most influential lifestyle publications.
-          </p>
-        </div>
+</section>
+<div id="brands" class="jumbotron">
+  <img src="https://unsplash.it/900/450" width="100%" alt="">
+</div>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h2 class="page-header" id="dropdowns">
+          Why Work With Us
+        </h1>
+        <p>
+          Reelak lets you engage with a young, tech-savvy audience with high social influence. Our past events regularly amass coverage in Singapore’s most influential lifestyle publications.
+        </p>
       </div>
     </div>
-    <!--p>
-      Our target audience consists of socially savvy, influential young professionals and families who embrace creativity, are open-minded and relish in the sense of community.
-    </p>
-    <p>
-      They value experiences over ownership of things, and would choose to spend money on a desirable, new experiences.
-    </p>
-    <p>
-      You can spot them at art-fuelled events, local music gigs, underground clubs, or outdoor family-friendly events.
-    </p-->
-  </section>
-</div>
+  </div>
+  <!--p>
+  Our target audience consists of socially savvy, influential young professionals and families who embrace creativity, are open-minded and relish in the sense of community.
+</p>
+<p>
+They value experiences over ownership of things, and would choose to spend money on a desirable, new experiences.
+</p>
+<p>
+You can spot them at art-fuelled events, local music gigs, underground clubs, or outdoor family-friendly events.
+</p-->
+</section>
