--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,4 +1,4 @@
-<section>
+<section class="spread">
   <div class="container">
     <h1 class="page-header">Contact us</h1>
     <p class="lead">
@@ -7,7 +7,7 @@
   </div>
 </section>
 
-<section>
+<section class="spread">
   <div class="container">
     <h2 class="page-header">Press</h1>
     <p>
