stabilize on tab switching

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -121,14 +121,19 @@ section.service-panels-container {
 }
 
 section.service-panels-container.opened {
-  height: 600px;
+  height: 400px;
+}
+
+section.service-panels-container .service-panels-row {
   position: relative;
+  height: 200px;
+  overflow: hidden;
 }
 
 .service-panels {
   opacity: 0;
-  /*position: absolute;*/
-  /*top: 20px;*/
+  position: absolute;
+  top: 20px;
   transition: opacity 0.2s ease-in;
 }
 
