--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -35,7 +35,7 @@
 </section>
 <section class="service-panels-container">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row service-panels-row">
       <div class="col-md-8 col-md-offset-2 service-panels" data-panel="1">
         <p class="lead">Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
         <p>
