--- a/views/partials/_enquiry.ejs
+++ b/views/partials/_enquiry.ejs
@@ -19,6 +19,7 @@
     <div class="form-group">
       <div class="col-md-12">
         <textarea class="form-control"></textarea>
+        <p class="help-block"></p>
       </div>
     </div>
   </div>
