latest before updating about page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -122,13 +122,13 @@
                   </ul-->
                 </li>
                 <li class="col-md-12">
-                  <h2><a href="#newsletter">Events</a></h2>
+                  <h2><a href="/#newsletter">Events</a></h2>
                   <!--ul class="list-unstyled">
                     <li><a href="#">Blog</a></li>
                   </ul-->
                 </li>
                 <li class="col-md-12">
-                  <h2><a href="/contact">Contact</a></h2>
+                  <h2><a href="/#footer">Contact</a></h2>
                 </li>
               </ul>
             </div>
@@ -138,43 +138,6 @@
     </header>
 
     <%- body %>
-
-    <!-- TODO: Partialize this -->
-    <section id="newsletter" class="padded">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <img src="https://unsplash.it/200/200" alt="200">
-            <img src="https://unsplash.it/200/200" alt="200">
-            <img src="https://unsplash.it/200/200" alt="200">
-            <!--div><img data-lazy="/images/carousel1.jpg" width="300" alt=""></div>
-            <div><img data-lazy="/images/carousel2.jpg" width="300" alt=""></div>
-            <div><img data-lazy="/images/carousel3.jpg" width="300" alt=""></div>
-            <div><img data-lazy="/images/carousel4.jpg" width="300" alt=""></div-->
-          </div>
-          <!--div class="col-md-3">
-          </div>
-          <div class="col-md-3">
-          </div-->
-        </div>
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 newsletter-container">
-            <h2 class="text-center">
-              See what we're up to, follow us on <a href="#" target="_blank">Instagram</a>
-            </h2>
-            <p class="text-center">
-              Be the first the hear about our new offerings and keep up to date with our events.
-            </p>
-            <form class="text-center">
-              <div class="form-group">
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-              </div>
-              <button type="submit" class="btn btn-primary">Subscribe</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <footer id="footer">
       <div class="container footer-links">
