--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -17,17 +17,14 @@
       </p>
       <div class="col-md-4">
         <h2>Film Curation</h2>
-        <p>Quirky, stirring, unforgettable films, from the vast and diverse library that is international cinema.</p>
         <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="1">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h2>Space Design</h2>
-        <p>The cinema: uprooted, reimagined, and recreated within the context of everyday spaces.</p>
         <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="2">View details &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h2>Bespoke Experience</h2>
-        <p>Film, space, and everything in between: the signature Reelak experience, customised for you.</p>
         <p><a class="btn btn-primary service-tabs" href="#" role="button" data-tab="3">View details &raquo;</a></p>
       </div>
     </div>
@@ -105,43 +102,4 @@
     </div>
   </div>
 </section>
-
-<!--section id="event-reel">
-  <div class="container">
-    <div class="row text-center">
-      <h2 class="section-heading">Event Reel</h2>
-      <hr class="light">
-      <div class="row">
-        <div class="col-xs-12 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="https://unsplash.it/200?image=<%= Math.floor(Math.random() * 1084) %>" alt="Reelak Event">
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="https://unsplash.it/200?image=<%= Math.floor(Math.random() * 1084) %>" alt="Reelak Event">
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="https://unsplash.it/200?image=<%= Math.floor(Math.random() * 1084) %>" alt="Reelak Event">
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="https://unsplash.it/200?image=<%= Math.floor(Math.random() * 1084) %>" alt="Reelak Event">
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="https://unsplash.it/200?image=<%= Math.floor(Math.random() * 1084) %>" alt="Reelak Event">
-          </a>
-        </div>
-        <div class="col-xs-12 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="https://unsplash.it/200?image=<%= Math.floor(Math.random() * 1084) %>" alt="Reelak Event">
-          </a>
-        </div>
-      </div>
-  </div>
-</section-->
+<%- partial('../partials/_subscribe') %>
