--- a/views/partials/_enquiry.ejs
+++ b/views/partials/_enquiry.ejs
@@ -25,7 +25,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <button type="submit" class="btn btn-primary pull-right">Submit</button>
+      <button type="submit" class="btn btn-primary pull-right">Send</button>
     </div>
   </div>
 </form>
