--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -15,6 +15,16 @@
     </div>
   </div>
 </section>
+<section class="about-galleries">
+  <div class="container text-center">
+    <img src="https://unsplash.it/800/400" alt="600">
+    <div>
+      <img class="split" src="https://unsplash.it/500/250" alt="200">
+      <img class="split" src="https://unsplash.it/500/250" alt="200">
+    </div>
+    <img src="https://unsplash.it/800/400" alt="600">
+  </div>
+</section>
 <section class="spread">
   <div class="container">
     <div class="row">
@@ -32,40 +42,78 @@
     </div>
   </div>
 </section>
-<section id="meet-the-team">
-  <div class="container-fluid no-padding">
+<section class="meet-the-team">
+  <div class="container">
+    <h2 class="text-center">Meet the Team</h2>
+
     <div class="row">
-      <img src="https://unsplash.it/900/150" width="100%" alt="">
+      <div class="col-md-5 text-center col-md-offset-1">
+        <h3 class="text-center">Prima Aulia Gusta</h3>
+        <img class="" src="https://unsplash.it/450/250" alt="200">
+        <small>Lead Instructor, General Assembly Singapore</small>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
+      <div class="col-md-5 text-center">
+        <h3 class="text-center">Prima Aulia Gusta</h3>
+        <img class="" src="https://unsplash.it/450/250" alt="200">
+        <small>Lead Instructor, General Assembly Singapore</small>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
     </div>
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <div class="row">
-          <h2 class="page-header">Our Team</h2>
-          <div class="col-md-3">
-            <h3>Prima Aulia Gusta</h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-          <div class="col-md-3">
-            <h3>Aqila Abu</h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-          <div class="col-md-3">
-            <h3>Elaine Neo</h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-          <div class="col-md-3">
-            <h3>Putra Muskita</h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          </div>
-        </div>
+      <div class="col-md-5 text-center col-md-offset-1">
+        <h3 class="text-center">Prima Aulia Gusta</h3>
+        <img class="" src="https://unsplash.it/450/250" alt="200">
+        <small>Lead Instructor, General Assembly Singapore</small>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+      </div>
+      <div class="col-md-5 text-center">
+        <h3 class="text-center">Prima Aulia Gusta</h3>
+        <img class="" src="https://unsplash.it/450/250" alt="200">
+        <small>Lead Instructor, General Assembly Singapore</small>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
       </div>
     </div>
   </div>
 </section>
-<div id="brands" class="jumbotron">
-  <img src="https://unsplash.it/900/450" width="100%" alt="">
-</div>
-<section>
+<section class="partners">
+  <div class="container">
+    <h2 class="text-center">
+      We work with those we wholeheartedly admire
+    </h2>
+    <div class="row">
+      <div class="col-md-4">
+        <img class="" src="https://unsplash.it/360/250" alt="200">
+      </div>
+      <div class="col-md-4">
+        <img class="" src="https://unsplash.it/360/250" alt="200">
+      </div>
+      <div class="col-md-4">
+        <img class="" src="https://unsplash.it/360/250" alt="200">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <img class="" src="https://unsplash.it/360/250" alt="200">
+      </div>
+      <div class="col-md-4">
+        <img class="" src="https://unsplash.it/360/250" alt="200">
+      </div>
+      <div class="col-md-4">
+        <img class="" src="https://unsplash.it/360/250" alt="200">
+      </div>
+    </div>
+  </div>
+</section>
+<!-- <section>
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
@@ -78,13 +126,4 @@
       </div>
     </div>
   </div>
-  <!--p>
-  Our target audience consists of socially savvy, influential young professionals and families who embrace creativity, are open-minded and relish in the sense of community.
-</p>
-<p>
-They value experiences over ownership of things, and would choose to spend money on a desirable, new experiences.
-</p>
-<p>
-You can spot them at art-fuelled events, local music gigs, underground clubs, or outdoor family-friendly events.
-</p-->
-</section>
+</section> -->
