--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -62,6 +62,22 @@
   background: url(http://www.mrmarcelschool.com/content/images/icon-menu.png) no-repeat center right;
 }
 
+/* Home */
+
+#hero {
+  background-color: #293143;
+  color: white;
+  margin-bottom: 0;
+}
+
+/* Testimonial */
+
+#testimonials {
+  background-color: #293143;
+  color: white;
+  padding: 60px 0;
+}
+
 /* Footer Styles*/
 .newsletter-container {
   text-align: left;
@@ -165,4 +181,35 @@ section.service-panels-container .service-panels-row {
 
 .footer-row {
   margin-bottom: 10px;
+}
+
+/* ABOUT US */
+.about-galleries {
+  background-color: #CBE9E4;
+}
+
+.about-galleries img {
+  margin: 40px 0;
+}
+
+.about-galleries img.split {
+  display: inline-block;
+  margin: 40px 20px;
+}
+
+/* TEAM */
+
+.meet-the-team {
+  background-color: #F5EC85;
+}
+
+/* PARTNERS */
+.partners {
+  margin: 20px 0 80px;
+}
+
+/* ABOUT PAGE GENERAL */
+
+.meet-the-team .row, .partners .row {
+  margin: 40px 0;
 }
